<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/about_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="25dp"
        android:text="@string/app_version"
        android:textColor="#000"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="25dp"
        android:text="@string/contact_developers"
        android:textColor="#000"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="25dp"
        android:autoLink="email"
        android:textColorLink="@color/colorPrimary"
        android:text="@string/email_to_contact"
        android:textSize="16sp"/>
</LinearLayout>