<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.mipt.asklector.ui.login.activity.LoginActivity"
    android:background="@color/background">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <TextView
        android:id="@+id/infoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_your_name"
        android:gravity="center"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="#000"
        android:textSize="18sp">
    </TextView>
    <TextView
        android:id="@+id/infoLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/allowed_characters"
        android:gravity="center"
        android:layout_below="@id/infoLabel"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:visibility="visible">
    </TextView>

    <EditText
        android:id="@+id/userNameTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/infoLabel2"
        android:hint="@string/username_text_field_hint"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:singleLine="true"
        android:inputType="textCapSentences"
        android:maxLength="15"/>

    <TextView
        android:id="@+id/errorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@id/userNameTextField"
        android:gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/sendNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/userNameTextField"
        android:text="@string/sendNameButton_title"
        android:onClick="login"
        />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>



</RelativeLayout>
