<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.mipt.asklector.ui.lectureConnection.activity.LectureConnectionActivity"
    android:background="@color/background">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <TextView
        android:id="@+id/infoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_lecture_id"
        android:gravity="center"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textSize="18sp"
        android:textColor="#000">
    </TextView>

    <EditText
        android:id="@+id/lectureIdTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/infoLabel"
        android:hint="@string/lecture_id_text_field_hint"
        android:inputType="number|phone"
        android:digits="1234567890"
        android:maxLength="4"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/errorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@id/lectureIdTextField"
        android:gravity="center"/>

    <Button
        android:id="@+id/connectToLectureWithIdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_below="@id/lectureIdTextField"
        android:text="@string/connectToLectureWithIdButton_title"
        android:onClick="connectToLectureWithId"
        android:clickable="true"
        android:visibility="invisible"
        />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>
